--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <!-- strings for tab2gallery -->
+    <string name="addImg">Add New Image</string>
+    <string name="delImg">Delete Image</string>
+
 </resources>
