[Contact] access phonebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <!-- strings for tab2gallery -->
     <string name="addImg">Add New Image</string>
     <string name="delImg">Delete Image</string>
+    <string name="title_activity_add_contact">AddContactActivity</string>
 
 </resources>
