--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Project 1</string>
+    <string name="app_name">ChanRong</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
@@ -12,5 +12,6 @@
     <string name="addImg">Add Img</string>
     <string name="delImg">Del Img</string>
     <string name="title_activity_add_contact">AddContactActivity</string>
+    <string name="seek_num">3 in a row</string>
 
 </resources>
