facebook login button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="title_activity_add_contact">AddContactActivity</string>
     <string name="seek_num">3 in a row</string>
 
+    <string name="fb_login_protocol_scheme">fb327109961035952</string>
+    <string name="facebook_app_id">455244501506871</string>
+
+
 </resources>
